[package]
name = "aoc_rust_2023"
version = "0.1.0"
authors = ["broccoli <me@broccol.ai>"]
edition = "2021"
repository = "https://github.com/username/aoc-rust-2023"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaah = "0.2.2"
clap = { version = "4.0", features = ["derive"] }

criterion = "0.4"
rayon = "1.8.0"
itertools = "0.12.0"

[[bench]]
name = "aoc-bench"
harness = false

